--- a/syasyokuya.html
+++ b/syasyokuya.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>1981年の写植機</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/main2.css">
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
     <section class="level1" aria-labelledby="1981年の写植機">
