--- a/syasyokuya.html
+++ b/syasyokuya.html
@@ -18,9 +18,9 @@
         <p>「小形くん、ちょっと来て」</p>
         <p>村西くんは奥の編集室から顔だけ出すと、そう言って作業室で荷造をしていた私を招き入れた。</p>
         <p>ここは西新宿の外れにある唐川ビル。青梅街道から一つ入った裏通りにある、ビルとは名ばかりの薄っぺらな二階建。その一階にマンガ情報誌『<span style="text-combine-upright: all">P</span>』編集部はあった。</p>
-        <p>この前年、一九八〇年だけで二百三十誌以上もの雑誌が創刊されていた。〝雑誌の時代〟が始まったのである。そんな中、私が夢中になっていたのが『ぴあ』『ビックリハウス』『本の雑誌』『奇想天外』といった、当時まだ世間には知られていない、零細出版社が刊行する比較的少部数のミニコミ誌だった。</p>
-        <p>ミニコミ誌には、その雑誌でなければ知ることができない情報にあふれていた。『<span style="text-combine-upright: all">P</span>』もそんな雑誌の一つで、今注目すべきマンガ家やマンガ作品をいち早く取り上げて教えてくれた。たとえば倉多江美、樹村みのり、大友克洋、高野文子といった、『少年ジャンプ』だけ読んでいたら一生知らなかったであろう作家を教えてくれたのは『<span style="text-combine-upright: all">P</span>』だった。</p>
-        <p>大学三年生になっていた私にとって、就職は嫌でもやってくる現実だ。高校時代からミニコミ誌に親しんできた私が、やがて自分もそうした雑誌を作ってみたいと考え始めるのは、ごく自然な成り行きだった。しかし三流文系私大の学生にとっては、零細出版社だって遙かに仰ぎ見る高嶺の花であり、自分より優秀な他大学の学生に交じって就職活動をしても、正社員として採用してもらえるとは到底思えなかった。</p>
+        <p>この前年、一九八〇年だけで二百三十誌以上もの雑誌が創刊されていた。〝雑誌の時代〟が始まったのである。そんな中、私が夢中になっていたのが『ぴあ』『ビックリハウス』『本の雑誌』『奇想天外』といった、当時まだ世間には知られていない、零細出版社が刊行する比較的少部数のサブカル誌だった。</p>
+        <p>サブカル誌には、その雑誌でなければ知ることができない情報にあふれていた。『<span style="text-combine-upright: all">P</span>』もそんな雑誌の一つで、今注目すべきマンガ家やマンガ作品をいち早く取り上げて教えてくれた。たとえば倉多江美、樹村みのり、大友克洋、高野文子といった、『少年ジャンプ』だけ読んでいたら一生知らなかったであろう作家を教えてくれたのは『<span style="text-combine-upright: all">P</span>』だった。</p>
+        <p>大学三年生になっていた私にとって、就職は嫌でもやってくる現実だ。高校時代からサブカル誌に親しんできた私が、やがて自分もそうした雑誌を作ってみたいと考え始めるのは、ごく自然な成り行きだった。しかし三流文系私大の学生にとっては、零細出版社だって遙かに仰ぎ見る高嶺の花であり、自分より優秀な他大学の学生に交じって就職活動をしても、正社員として採用してもらえるとは到底思えなかった。</p>
         <p>そんなある日、『<span style="text-combine-upright: all">P</span>』の誌面の片隅に〝無給スタッフ募集〟の記事を見つけ、飛びつくように応募したところ、十人近くの集団面接でなぜか一人だけ合格、前年十二月からタダ働きの〝バイトくん〟の一人として働きはじめることになったのだった。</p>
         <p>通い始めてまもなく、人々が交わす四方山話から、少し前に編集部の主力が内紛でごっそり抜けたこと、だから現在は極端な人手不足に陥っていることを知った。道理でいつ行っても閑散としていた訳だ。</p>
         <p>知識も経験もない、ただ出版業界の片隅に潜り込みたい一心で応募した私にとって、この状況は紛れもなくラッキーと言えそうだった。サルの手も借りたいと、素人の私でも正式な編集部員に抜擢してくれるかもしれないからだ。ところが入ってから約一ヵ月、バックナンバーの発送や、作家リストの清書など、あまり編集とは関係なさそうな単純作業ばかりやらされる毎日だった。まあ〝無給スタッフ〟なのだから仕方ない。とはいえ……。そこに村西くんのお招きだ。</p>
